--- a/Website/Mur_Image_SiteWeb/Frontend/src/component/timeLinePart.css
+++ b/Website/Mur_Image_SiteWeb/Frontend/src/component/timeLinePart.css
@@ -1,37 +1,33 @@
-/* screen.css */
-
-.screen {
-    padding: 20px;
-    width: 200px;
-    height: 100px;
-    border-radius: 12px;
-    background-color: #f0f0f0;
+.timeLinePart {
+    width: 90px;
+    height: 30px;
+    border-radius: 6px;
+    background-color: #cbcbcb;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0px;
+    margin: 1px;
     color: #333;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  }
-  
-.screen:hover{
-    background-color: #acacac;
-    color: #333;
+    transition: background-color 0.3s ease; 
     cursor: pointer;
 }
 
-.screen.isSelected {
+.timeLinePart:hover {
+  background-color: #a0a0a0; /* Couleur légèrement grise au survol */
+}
+
+.timeLinePart.isSelected {
   background-color: #808080; /* Couleur grise pour les éléments sélectionnés */
 }
 
-.screen.isSelected:hover {
+.timeLinePart.isSelected:hover {
   background-color: #606060; /* Couleur grise plus foncée pour les éléments sélectionnés au survol */
 }
 
 
-.type-label {
-    font-size: 16px;
-    font-weight: bold;
-  }
-  
+.timeLinePart > h2 {
+    position: relative;
+    margin-bottom: 0px;
+}
