Reste plus qu'à ajouter la logique de coordonnées à l'upload des images et les form pour les différents widgets

--- a/Website/Mur_Image_SiteWeb/Frontend/src/App.css
+++ b/Website/Mur_Image_SiteWeb/Frontend/src/App.css
@@ -14,6 +14,9 @@
 }
 
 .screens {
+  margin-right: auto;
+  margin-left: auto ;
+  max-width: 600px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2px; /* Vous pouvez ajuster cet espacement selon vos préférences */
